--- a/web/wicket-website/assets/newsletter-templates/chopped-winter-2010/newsletter.html
+++ b/web/wicket-website/assets/newsletter-templates/chopped-winter-2010/newsletter.html
@@ -5,38 +5,38 @@
     <title>Winter 2010 Newsletter from PhET</title>
 </head>
 <body style="margin: 0; padding: 0; background-color: #fff; font-family: Arial,sans-serif; font-size: 12px;">
-<table width="100%" style="margin: 0; padding: 0; border-collapse: collapse;" cellpadding="0" cellspacing="0" border="0">
-    <tr align="center">
+<table width="100%" cellpadding="0" cellspacing="0" border="0" align="center">
+    <tr>
         <td>
-            <table width="830" style="margin: 0; padding: 0; border-collapse: collapse;" cellpadding="0" cellspacing="0" border="0">
-                <tr style="margin: 0; padding: 0; border-collapse: collapse;">
+            <table width="830" cellpadding="0" cellspacing="0" border="0">
+                <tr>
                     <td colspan="5">
-                        <table width="830" style="margin: 0; padding: 0;" cellpadding="0" cellspacing="0">
+                        <table width="830" cellpadding="0" cellspacing="0" border="0">
                             <tr>
-                                <td width="242" height="126" style="margin: 0; padding: 0;">
-                                    <img src="http://phet.colorado.edu/newsletters/2010-winter/header-logo.png" alt="PhET Logo" width="242" height="126"/>
-                                </td>
-                                <td width="94" height="126" style="margin: 0; padding: 0;">
-                                    <img src="http://phet.colorado.edu/newsletters/2010-winter/header-spacer.png" alt="" width="94" height="126"/>
-                                </td>
-                                <td width="400" height="126" style="margin: 0; padding: 0;">
-                                    <img src="http://phet.colorado.edu/newsletters/2010-winter/header-winter.png" alt="Winter 2010 Newsletter" width="400" height="126"/>
-                                </td>
-                                <td width="94" height="126" style="margin: 0; padding: 0;">
-                                    <img src="http://phet.colorado.edu/newsletters/2010-winter/header-spacer-dark.png" alt="" width="94" height="126"/>
-                                </td>
+                                <td width="242" height="126" style="margin: 0; padding: 0;"><img
+                                        src="http://phet.colorado.edu/newsletters/2010-winter/header-logo.png"
+                                        alt="PhET Logo" width="242" height="126"/></td>
+                                <td width="94" height="126" style="margin: 0; padding: 0;"><img
+                                        src="http://phet.colorado.edu/newsletters/2010-winter/header-spacer.png"
+                                        alt="" width="94" height="126"/></td>
+                                <td width="400" height="126" style="margin: 0; padding: 0;"><img
+                                        src="http://phet.colorado.edu/newsletters/2010-winter/header-winter.png"
+                                        alt="Winter 2010 Newsletter" width="400" height="126"/></td>
+                                <td width="94" height="126" style="margin: 0; padding: 0;"><img
+                                        src="http://phet.colorado.edu/newsletters/2010-winter/header-spacer-dark.png"
+                                        alt="" width="94" height="126"/></td>
                             </tr>
                         </table>
                     </td>
                 </tr>
-                <tr style="margin: 0; padding: 0; border-collapse: collapse;">
+                <tr>
                     <!-- width 200 - 15 * 2-->
                     <td width="170" valign="top" style="margin: 0; padding: 13px 15px; background-color: #ecd598;">
                         <h3 style="text-align: center; margin: 0; padding-bottom: 0;">Top 5 States</h3>
 
                         <div style="text-align: center;">(# of sessions per year)</div>
                         <br>
-                        <table cellpadding="0" cellspacing="0" style="margin: 0; padding: 0;" width="100%" border="0">
+                        <table cellpadding="0" cellspacing="0" width="100%" border="0">
                             <tr>
                                 <td>Texas</td>
                                 <td align="right">213,607</td>
@@ -155,21 +155,24 @@
                         <p>
                             <a href="http://www.facebook.com/pages/PhET-Interactive-Simulations/161503243888932?v=wall"
                                style="text-decoration: none;">
-                                <img src="http://phet.colorado.edu/newsletters/2010-winter/facebook.png" alt="Facebook Icon"
+                                <img src="http://phet.colorado.edu/newsletters/2010-winter/facebook.png"
+                                     alt="Facebook Icon"
                                      style="vertical-align:middle; border: none;"/> Facebook
                             </a>
                         </p>
 
                         <p>
                             <a href="http://twitter.com/PhETSims" style="text-decoration: none;">
-                                <img src="http://phet.colorado.edu/newsletters/2010-winter/twitter.png" alt="Twitter Icon" style="vertical-align:middle; border: none;"/>
+                                <img src="http://phet.colorado.edu/newsletters/2010-winter/twitter.png"
+                                     alt="Twitter Icon" style="vertical-align:middle; border: none;"/>
                                 Twitter
                             </a>
                         </p>
 
                         <p>
                             <a href="http://phet.colorado.edu/blog/" style="text-decoration: none;">
-                                <img src="http://phet.colorado.edu/newsletters/2010-winter/phet-icon.png" alt="PhET Icon" style="vertical-align:middle; border: none;"/>
+                                <img src="http://phet.colorado.edu/newsletters/2010-winter/phet-icon.png"
+                                     alt="PhET Icon" style="vertical-align:middle; border: none;"/>
                                 PhET Blog
                             </a>
                         </p>
@@ -181,12 +184,13 @@
                         </p>
                     </td>
                 </tr>
-                <tr style="margin: 0; padding: 0; border-collapse: collapse;">
+                <tr>
                     <td colspan="5" style="margin: 0; padding: 0; border-collapse: collapse;">
-                        <img src="http://phet.colorado.edu/newsletters/2010-winter/footer-spacer.png" alt="PhET Logo" width="830" height="7"/>
+                        <img src="http://phet.colorado.edu/newsletters/2010-winter/footer-spacer.png" alt="PhET Logo"
+                             width="830" height="7"/>
                     </td>
                 </tr>
-                <tr style="margin: 0; padding: 0; border-collapse: collapse;">
+                <tr>
                     <td colspan="5" style="background-color: #fff; text-align: center;">
                         @FOOTER@
                     </td>
