--- a/trunk/web/wicket-website/assets/newsletter-templates/chopped-winter-2010/newsletter.html
+++ b/trunk/web/wicket-website/assets/newsletter-templates/chopped-winter-2010/newsletter.html
@@ -5,8 +5,8 @@
     <title>Winter 2010 Newsletter from PhET</title>
 </head>
 <body style="margin: 0; padding: 0; background-color: #fff; font-family: Arial,sans-serif; font-size: 12px;">
-<table width="100%" cellpadding="0" cellspacing="0" border="0" align="center">
-    <tr>
+<table width="100%" cellpadding="0" cellspacing="0" border="0">
+    <tr align="center">
         <td>
             <table width="830" cellpadding="0" cellspacing="0" border="0">
                 <tr>
