--- a/web/wicket-website/assets/newsletter-templates/email/newsletter.html
+++ b/web/wicket-website/assets/newsletter-templates/email/newsletter.html
@@ -13,18 +13,18 @@
                     <td colspan="5">
                         <table width="830" cellpadding="0" cellspacing="0" border="0">
                             <tr>
-                                <td width="242" height="126" style="margin: 0; padding: 0;"><img
-                                        src="http://phet.colorado.edu/newsletters/2010-winter/header-logo.png"
-                                        alt="PhET Logo" width="242" height="126"/></td>
-                                <td width="94" height="126" style="margin: 0; padding: 0;"><img
-                                        src="http://phet.colorado.edu/newsletters/2010-winter/header-spacer.png"
-                                        alt="" width="94" height="126"/></td>
-                                <td width="400" height="126" style="margin: 0; padding: 0;"><img
-                                        src="http://phet.colorado.edu/newsletters/2010-winter/header-winter.png"
-                                        alt="Winter 2010 Newsletter" width="400" height="126"/></td>
-                                <td width="94" height="126" style="margin: 0; padding: 0;"><img
-                                        src="http://phet.colorado.edu/newsletters/2010-winter/header-spacer-dark.png"
-                                        alt="" width="94" height="126"/></td>
+                                <td width="242" height="118" style="margin: 0; padding: 0;"><img
+                                        src="http://phet.colorado.edu/newsletters/2010-winter/email/header-logo.png"
+                                        alt="PhET Logo" width="242" height="118"/></td>
+                                <td width="94" height="118" style="margin: 0; padding: 0;"><img
+                                        src="http://phet.colorado.edu/newsletters/2010-winter/email/header-spacer.png"
+                                        alt="" width="94" height="118"/></td>
+                                <td width="400" height="118" style="margin: 0; padding: 0;"><img
+                                        src="http://phet.colorado.edu/newsletters/2010-winter/email/header-winter.png"
+                                        alt="Winter 2010 Newsletter" width="400" height="118"/></td>
+                                <td width="94" height="118" style="margin: 0; padding: 0;"><img
+                                        src="http://phet.colorado.edu/newsletters/2010-winter/email/header-spacer-dark.png"
+                                        alt="" width="94" height="118"/></td>
                             </tr>
                         </table>
                     </td>
@@ -32,7 +32,8 @@
                 <tr>
                     <!-- width 200 - 15 * 2-->
                     <td width="170" valign="top" style="margin: 0; padding: 13px 15px; background-color: #ecd598;">
-                        <h3 style="text-align: center; margin: 0; padding-bottom: 0;">Top 5 States</h3>
+                        <h3 style="text-align: center; margin: 0; padding-bottom: 0; color: #000 !important;">Top 5
+                            States</h3>
 
                         <div style="text-align: center;">(# of sessions per year)</div>
                         <br>
@@ -67,7 +68,7 @@
 
                         </div>
 
-                        <h3 style="text-align: center;">Upcoming Workshops:</h3>
+                        <h3 style="text-align: center; color: #000 !important;">Upcoming Workshops:</h3>
 
                         <p>
                             PhET Simulations - Fun Tools to Help Your Students<br>
@@ -93,7 +94,7 @@
                     <!-- 478 - 15 * 2 -->
                     <td width="448" valign="top"
                         style="margin: 0; background-color: #fff; line-height: 125%; padding: 8px 15px;">
-                        <h2 style="margin: 0;">PhET's New Directions</h2>
+                        <h2 style="margin: 0; color: #000 !important;">PhET's New Directions</h2>
 
                         <p>
                             While we're continuing to advance our core programs in designing and researching physics
@@ -112,7 +113,7 @@
 
                         <hr>
 
-                        <h2>Words from Our Team....</h2>
+                        <h2 style="color: #000 !important;">Words from Our Team....</h2>
 
                         <p>
                             The following is an interview with Patricia Loeblein, a teacher at Evergreen High School.
@@ -127,7 +128,7 @@
 
                         <hr>
 
-                        <h2>Check Out These New Simuations!</h2>
+                        <h2 style="color: #000 !important;">Check Out These New Simuations!</h2>
 
                         <ul>
                             <li>Gene Machine: The Lac Operon</li>
@@ -150,12 +151,12 @@
                     </td>
                     <!-- 150 - 15 * 2 -->
                     <td width="120" valign="top" style="margin: 0; padding: 13px 15px; background-color: #f7f7f7;">
-                        <h3 style="margin: 0;">Follow PhET on:</h3>
+                        <h3 style="margin: 0; color: #000 !important;">Follow PhET on:</h3>
 
                         <p>
                             <a href="http://www.facebook.com/pages/PhET-Interactive-Simulations/161503243888932?v=wall"
                                style="text-decoration: none;">
-                                <img src="http://phet.colorado.edu/newsletters/2010-winter/facebook.png"
+                                <img src="http://phet.colorado.edu/newsletters/2010-winter/email/facebook.png"
                                      alt="Facebook Icon"
                                      style="vertical-align:middle; border: none;"/> Facebook
                             </a>
@@ -163,7 +164,7 @@
 
                         <p>
                             <a href="http://twitter.com/PhETSims" style="text-decoration: none;">
-                                <img src="http://phet.colorado.edu/newsletters/2010-winter/twitter.png"
+                                <img src="http://phet.colorado.edu/newsletters/2010-winter/email/twitter.png"
                                      alt="Twitter Icon" style="vertical-align:middle; border: none;"/>
                                 Twitter
                             </a>
@@ -171,7 +172,7 @@
 
                         <p>
                             <a href="http://phet.colorado.edu/blog/" style="text-decoration: none;">
-                                <img src="http://phet.colorado.edu/newsletters/2010-winter/phet-icon.png"
+                                <img src="http://phet.colorado.edu/newsletters/2010-winter/email/phet-icon.png"
                                      alt="PhET Icon" style="vertical-align:middle; border: none;"/>
                                 PhET Blog
                             </a>
@@ -184,15 +185,26 @@
                         </p>
                     </td>
                 </tr>
-                <tr>
-                    <td colspan="5" style="margin: 0; padding: 0; border-collapse: collapse;">
-                        <img src="http://phet.colorado.edu/newsletters/2010-winter/footer-spacer.png" alt="PhET Logo"
-                             width="830" height="7"/>
-                    </td>
-                </tr>
+                <!--<tr>-->
+                <!--<td colspan="5" style="margin: 0; padding: 0; border-collapse: collapse;">-->
+                <!--<img src="http://phet.colorado.edu/newsletters/2010-winter/email/footer-spacer.png" alt="PhET Logo"-->
+                <!--width="830" height="7"/>-->
+                <!--</td>-->
+                <!--</tr>-->
                 <tr>
                     <td colspan="5" style="background-color: #fff; text-align: center;">
-                        @FOOTER@
+                        <p style="font-size: 12px; color: #888888; margin: 0; padding: 20px 20px 0;">
+                            You received this e-mail because you signed up at our website or emailed us at
+                            <a style="font-size: 12px; color: #888888" href="mailto:phethelp@colorado.edu">phethelp@colorado.edu</a>.
+                            To opt out of these newsletters, please click on this link:
+                            <a style="font-size: 12px; color: #888888"
+                               href="@UNSUBSCRIBE@">@UNSUBSCRIBE@</a>
+                            or copy and paste the text into your browser.
+                        </p>
+
+                        <p style="font-size: 12px; color: #888888; margin: 0; padding: 20px;">
+                            PhET Interactive Simulations | University of Colorado 390 UCB | Boulder, CO 80309-0390
+                        </p>
                     </td>
                 </tr>
             </table>
